# robot_simulation

./: .gitignore  CMakeLists.txt  README.md  planning.txt
archive/: environment.cpp  map.cpp  map.h  robotics.h  simulator.cpp  simulator.h
include/: behavior_controller.h  coordinator.h  data_types.h  helper_functions.h  localization_module.h  planning_module.h  problem_description.h  robot.h  simulator.h  visualization.h  world.h
libs/: behavior_controller.cpp  coordinator.cpp  data_types.cpp  helper_functions.cpp  localization_module.cpp  planning_module.cpp  problem_description.cpp  robot.cpp  simulator.cpp  visualization.cpp  world.cpp
src/: give_commands.cpp  hello_world.cpp  main.cpp  read_config.cpp
